Add thrift API, add datagen serialization